--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
 
         <div class="roster-cards-container">
 
+
+
+          <div class="student-card" id="Margarita-Khodzka-card">
+            <a href="students/Margarita-Khodzka.html">
+              <div class="view-profile-div">
+                <h3 class="view-profile-text">View Profile</h3>
+              </div>
+              <div class="card-text-container">
+                <h4 class="student-name">Margarita Khodzka</h4>
+                <p class="student-location">Rockaway Park, NY</p>
+              </div>
+            </a>
+          </div>
+
+
           <div class="student-card" id="krystle-barnes-card">
             <a href="students/krystle-barnes.html">
               <div class="view-profile-div">
@@ -61,7 +76,7 @@
               </div>
             </a>
           </div>
-          
+
           <div class="student-card" id="liah-wallace-card">
             <a href="students/liah-wallace.html">
               <div class="view-profile-div">
