--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
 
 
-          <div class="student-card" id="Margarita-Khodzka-card">
-            <a href="students/Margarita-Khodzka.html">
+          <div class="student-card" id="margarita-khodzka-card">
+            <a href="students/margarita-khodzka.html">
               <div class="view-profile-div">
                 <h3 class="view-profile-text">View Profile</h3>
               </div>
