--- a/students/margarita-khodzka.html
+++ b/students/margarita-khodzka.html
@@ -16,9 +16,9 @@
         </a>
       </header>
 
-      <div class="profile-banner" id="Margarita-Khodzka-cover"></div>
+      <div class="profile-banner" id="margarita-khodzka-cover"></div>
       <div class="vitals-container">
-        <div class="profile-photo" id="Margarita-Khodzka-card"></div>
+        <div class="profile-photo" id="margarita-khodzka-card"></div>
         <div class="social-icon-container">
           <a href="https://github.com/MargaritaKhodzka" target="blank"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
           <a href="https://www.linkedin.com/in/margaritakhodzka" target="blank"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
